--- a/game/index.html
+++ b/game/index.html
@@ -35,13 +35,13 @@
 			
 			@font-face {font-family: Fixedsys; src: url('../data/FSEX300.ttf');}
 			@font-face {font-family: x3; src: url('../data/3x3.ttf');}
-			@font-face {font-family: windows; src: url('../data/windows_command_prompt.ttf');}
+			@font-face {font-family: windows; src: url('../data/windows.ttf');}
 			@font-face {font-family: comicsans; src: url('../data/comic_sans.ttf');}
 			@font-face {font-family: GubbleBum; src: url('../data/GUBBLO___.ttf');}
 			
 		</style>
 	</head>
-	<body>
+	<body onload="init()">
 		<script src="game.js"></script>
 	</body>
 </html>
