--- a/game/index.html
+++ b/game/index.html
@@ -30,7 +30,7 @@
 			}
 			p{
 			  	color:#ffffff;
-			  	font-size:9px;
+			  	font-size:18px;
 			}
 			
 			@font-face {font-family: Fixedsys; src: url('../data/FSEX300.ttf');}
@@ -42,6 +42,8 @@
 		</style>
 	</head>
 	<body onload="init()">
+		<!--<p id="debug" style="color:#ffffff;text-align:center; margin-left: auto;margin-right: auto;"> ... </p>
+		<button onclick="zerg_rush()">ZERG</button>-->
 		<script src="game.js"></script>
 	</body>
 </html>
